[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/PopupMenu/PopupMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 0.588235 )
font_data = ExtResource( 1 )

[node name="PopupMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_right = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Popup" parent="MarginContainer"]
margin_right = 192.0
margin_bottom = 360.0
popup_exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Menu"]
margin_right = 192.0
margin_bottom = 360.0
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="MarginContainer/Menu/VBoxContainer"]
margin_top = 127.0
margin_right = 192.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Resume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveGame" type="Button" parent="MarginContainer/Menu/VBoxContainer"]
margin_top = 155.0
margin_right = 192.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Save Game"
flat = true

[node name="LoadGame" type="Button" parent="MarginContainer/Menu/VBoxContainer"]
margin_top = 155.0
margin_right = 192.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Load Game"
flat = true

[node name="Options" type="Button" parent="MarginContainer/Menu/VBoxContainer"]
margin_top = 183.0
margin_right = 192.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Options"
flat = true

[node name="Return" type="Button" parent="MarginContainer/Menu/VBoxContainer"]
margin_top = 211.0
margin_right = 192.0
margin_bottom = 233.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Return"
flat = true

[node name="Options" type="Popup" parent="MarginContainer"]
margin_right = 192.0
margin_bottom = 360.0
popup_exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Options"]
margin_right = 192.0
margin_bottom = 360.0
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="CheckButton" parent="MarginContainer/Options/VBoxContainer"]
margin_top = 101.0
margin_right = 192.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "FPS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mute" type="CheckButton" parent="MarginContainer/Options/VBoxContainer"]
margin_top = 147.0
margin_right = 192.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Mute"
flat = true

[node name="VolumeLabel" type="Label" parent="MarginContainer/Options/VBoxContainer"]
margin_top = 193.0
margin_right = 192.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = " Volume:"

[node name="Volume" type="HSlider" parent="MarginContainer/Options/VBoxContainer"]
margin_top = 215.0
margin_right = 192.0
margin_bottom = 231.0
min_value = -42.0
max_value = 22.0

[node name="Cancel" type="Button" parent="MarginContainer/Options/VBoxContainer"]
margin_top = 237.0
margin_right = 192.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Cancel"
flat = true

[connection signal="pressed" from="MarginContainer/Menu/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/VBoxContainer/SaveGame" to="." method="_on_SaveGame_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="MarginContainer/Options/VBoxContainer/FPS" to="." method="_on_FPS_pressed"]
[connection signal="pressed" from="MarginContainer/Options/VBoxContainer/Mute" to="." method="_on_Mute_pressed"]
[connection signal="value_changed" from="MarginContainer/Options/VBoxContainer/Volume" to="." method="_on_Volume_value_changed"]
[connection signal="pressed" from="MarginContainer/Options/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
